# TCPServer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  groups  install.sh  project.config
config/: CMakeLists.txt  tcp-server-config.json
src/: CMakeLists.txt  FormattedSizeValidation.hpp  TCPServer.cpp  TCPServer.hpp  TCPServerApp.cpp  TCPServerApp.hpp  TCPServerLogger.cpp  TCPServerLogger.hpp  TCPServerSession.cpp  TCPServerSession.hpp  TCPServerTask.cpp  TCPServerTask.hpp  VariadicLogger.hpp  main.cpp
test/: CMakeLists.txt  TestTCPServer.cpp  client_connection.feature  test_tcp_server.cpp
